Got texture projection working with a simple canvas element

--- a/examples/map_projection.html
+++ b/examples/map_projection.html
@@ -39,6 +39,8 @@
 		<div id="potree_render_area"></div>
 	</div>
 
+	<canvas id="texture" width="100" height="100" style="height: 100px; width: 100px; position: fixed; right: 0px; bottom: 0px; z-index: 1;"></canvas>
+
 	<script src="./js/map_projection.js"></script>
 	
 	
