--- a/examples/map_projection.html
+++ b/examples/map_projection.html
@@ -29,6 +29,8 @@
 	<script src="../libs/i18next/i18next.js"></script>
 	<script src="../libs/jstree/jstree.js"></script>
 	<script src="../build/potree/potree.js"></script>
+	<!-- <script src="../src/workers/serviceworker.js"></script> -->
+
 	<script src="../libs/plasio/js/laslaz.js"></script>
 
 	<!-- INCLUDE ADDITIONAL DEPENDENCIES HERE -->
