--- a/examples/map_projection.html
+++ b/examples/map_projection.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="../build/potree/potree.css">
 	<link rel="stylesheet" type="text/css" href="../libs/jquery-ui/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="../libs/perfect-scrollbar/css/perfect-scrollbar.css">
-	<!-- <link rel="stylesheet" type="text/css" href="../libs/openlayers3/ol.css">
+	 <link rel="stylesheet" type="text/css" href="../libs/openlayers3/ol.css">
 	<link rel="stylesheet" type="text/css" href="../libs/spectrum/spectrum.css"> -->
 	<link rel="stylesheet" type="text/css" href="../libs/jstree/themes/mixed/style.css">
 </head>
@@ -25,7 +25,7 @@
 	<script src="../libs/tween/tween.min.js"></script>
 	<script src="../libs/d3/d3.js"></script>
 	<script src="../libs/proj4/proj4.js"></script>
-	<!-- <script src="../libs/openlayers3/ol.js"></script> -->
+	 <script src="../libs/openlayers3/ol.js"></script> 
 	<script src="../libs/i18next/i18next.js"></script>
 	<script src="../libs/jstree/jstree.js"></script>
 	<script src="../build/potree/potree.js"></script>
@@ -38,6 +38,7 @@
 
 	<div class="potree_container" style="position: absolute; width: 100%; height: 100%; left: 0px; top: 0px; ">
 		<div id="potree_render_area"></div>
+		<div id="potree_sidebar_container"> </div>
 	</div>
 
 	<canvas id="texture" width="256"  height="256" style="display: none; height: 256px; width: 256px; position: fixed; right: 0px; bottom: 0px; z-index: 1;"></canvas>
