Moved the js from the map_projection example

--- a/examples/map_projection.html
+++ b/examples/map_projection.html
@@ -43,9 +43,32 @@
 
 	<canvas id="texture" width="256"  height="256" style="display: none; height: 256px; width: 256px; position: fixed; right: 0px; bottom: 0px; z-index: 1;"></canvas>
 
-	<script src="./js/map_projection.js"></script>
+	<script>
+		(function() {
+			window.viewer = new Potree.Viewer(document.getElementById("potree_render_area"));
+			Potree.MapTextureManagerSettings.tileServer = "http://tileserver.bnjamin.com/styles/osm-bright/";
+			viewer.setDescription("Point cloud courtesy of <a target='_blank' href='https://kortforsyningen.dk/'>https://kortforsyningen.dk/</a>");
 
+			viewer.loadGUI(() => {
+				viewer.setLanguage('en');
+			});
 
+			// Load and add point cloud to scene
+			Potree.loadPointCloud("http://aarhus.bnjamin.com/cloud.js", "aarhus", e => {
+				let scene = viewer.scene;
+				let pointcloud = e.pointcloud;
+				pointcloud.usesMapTexture = true;
+
+				let material = pointcloud.material;
+				material.size = 1.2;
+				material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
+				material.shape = Potree.PointShape.PARABOLOID;
+
+				scene.addPointCloud(pointcloud);
+				viewer.fitToScreen();
+			});
+		})();
+	</script>
 
 </body>
 
